syntax = "proto3";

package example;
option go_package="examplepb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}
message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}
service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse) {};
}
